--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,14 @@ language: python
 python:
   - "2.7"
 
-services:
-  - neo4j
+jdk:
+  - oraclejdk7
+
+before_install:
+  - wget dist.neo4j.org/neo4j-community-2.2.0-unix.tar.gz
+  - tar -xzf neo4j-community-2.2.0-unix.tar.gz
+  - sed -i.bak s/dbms.security.auth_enabled=true/dbms.security.auth_enabled=false/g neo4j-community-2.2.0/conf/neo4j-server.properties
+  - neo4j-community-2.2.0/bin/neo4j start
 
 install: "pip install -r requirements.txt"
 
