--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ jdk:
   - oraclejdk7
 
 before_install:
+  - export DJANGO_SETTINGS_MODULE="neodjango.tests.test_settings"
   - wget dist.neo4j.org/neo4j-community-2.2.0-unix.tar.gz
   - tar -xzf neo4j-community-2.2.0-unix.tar.gz
   - sed -i.bak s/dbms.security.auth_enabled=true/dbms.security.auth_enabled=false/g neo4j-community-2.2.0/conf/neo4j-server.properties
@@ -14,4 +15,4 @@ before_install:
 
 install: "pip install -r requirements.txt"
 
-script: nosetests
+script: nosetests --verbose
