Added new version in setup and new lines in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ lib/
 build/
 dist/
 virtualenv
+*.ipr
+.shell_history
+*.iml
+*.iws
 *.egg-info
 *.pot
 *.py[co]
@@ -26,3 +30,7 @@ virtualenv
 .pypirc
 .project
 .env
+.idea
+.iws
+.iml
+target
